--- a/client-app/src/pages/Service/Service.module.scss
+++ b/client-app/src/pages/Service/Service.module.scss
@@ -172,7 +172,7 @@ input#behavior:checked ~ label#behaviorLabel {
 }
 
 //Поля ввода
-input.input {
+.ininput {
     width: 100px;
     height: 40px;
     background: #DDDFE6;
