--- a/client-app/src/component/CarouselBox/CarouselBox.module.scss
+++ b/client-app/src/component/CarouselBox/CarouselBox.module.scss
@@ -4,3 +4,9 @@
     border: 1px solid transparent !important;
     border-radius: 10px;
 }
+
+.fortext {
+    display: inline;
+    background-color: rgba(0, 0, 0, 0.5);
+   
+}
